syntax = "proto3";

option go_package = "github.com/vercel/turborepo/cli/internal/server/server";

package server;

service Turbo {
  rpc Ping (PingRequest) returns (PingReply) {}

  // Implement cache watching
  rpc NotifyOutputsWritten (NotifyOutputsWrittenRequest) returns (NotifyOutputsWrittenResponse) {}
  rpc GetChangedOutputs (GetChangedOutputsRequest) returns (GetChangedOutputsResponse) {}
}

message PingRequest {}
message PingReply {}

message NotifyOutputsWrittenRequest {
  repeated string output_globs = 1;
  string hash = 2;
}

message NotifyOutputsWrittenResponse {}

message GetChangedOutputsRequest {
  repeated string output_globs = 1;
  string hash = 2;
}

message GetChangedOutputsResponse {
  repeated string changed_output_globs = 1;
}
